<?xml version="1.0" encoding="utf-8"?>
<LinearLayout 
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:gravity="center_horizontal" 
    android:orientation="vertical" 
    android:background="@drawable/bg_login" 
    android:layout_width="match_parent" 
    android:layout_height="match_parent">

        <LinearLayout 
            android:gravity="center" 
            android:orientation="vertical" 
            android:padding="10.0dip" 
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dp"
        	android:layout_marginLeft="10dp" 
            android:layout_marginTop="60.0dip">
            <LinearLayout 
                android:gravity="center_vertical" 
                android:orientation="horizontal" 
                android:background="@drawable/input_top" 
                android:layout_width="match_parent" 
                android:layout_height="wrap_content">
                <EditText 
                    android:id="@+id/etLibraryName"
            		android:hint="@string/library_name" 
                    android:background="@null" 
                    android:layout_width="0dp" 
                    android:layout_height="wrap_content"  
                    android:layout_weight="1.0" 
                    android:inputType="textEmailAddress" />
            </LinearLayout>
            <LinearLayout 
                android:gravity="center_vertical" 
                android:orientation="horizontal" 
                android:background="@drawable/input_bottom" 
                android:layout_width="match_parent" 
                android:layout_height="wrap_content">
                <EditText
                    android:id="@+id/etLibraryPassword"
            		android:hint="@string/library_password"  
                    android:background="@null" 
                    android:layout_width="0dp" 
                    android:layout_height="wrap_content" 
                    android:layout_weight="1.0" 
                    android:inputType="textPassword" />
            </LinearLayout>
        </LinearLayout>
        <LinearLayout 
            android:orientation="horizontal" 
            android:paddingLeft="10.0dip" 
            android:paddingRight="10.0dip" 
            android:layout_width="match_parent" 
            android:layout_height="wrap_content">
            <CheckBox                 
                android:layout_marginLeft="5dp"
                android:layout_width="wrap_content" 
                android:layout_height="wrap_content" 
                 />
            <TextView 
                android:layout_width="wrap_content" 
                android:layout_height="wrap_content"
                android:textSize="15.0dip"
                android:text="@string/checkbox"
                android:textColor="#000000"
                />
        </LinearLayout>
        <Button 
            android:id="@+id/btnLogin"
            android:text="@string/login_btn"
            android:textSize="20sp"
            android:background="@drawable/btn_library" 
            android:layout_width="250dp" 
            android:layout_height="40dp" 
            android:layout_margin="12.0dip" />
        <Button
			android:id="@+id/btnExit"
			android:text="@string/exit_btn"
            android:textSize="20sp"
            android:background="@drawable/btn_library" 
            android:layout_width="250dp" 
            android:layout_height="40dp" 
            android:layout_margin="12.0dip" />
        
        <ImageView
            android:contentDescription="@string/action_settings"
            android:layout_width="wrap_content" 
            android:layout_height="70dp" 
            android:src="@drawable/bg_library_logo"
            />
</LinearLayout>
