<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    
    <RelativeLayout 
    android:layout_width="match_parent"
    android:layout_height="40dp"
    android:gravity="center_vertical"
    android:background="@drawable/bg_topbar">
    
	<TextView 
	    android:id="@+id/tvTitleBar1"
	    android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tvTitleBar"
        android:textSize="18sp"
        android:paddingLeft="10dp"
        android:textColor="@color/white"
        android:layout_centerVertical="true"
	    />
	<Button
	    android:id="@+id/btAppBack1"
	    android:background="@drawable/btn_back"
	    android:layout_marginRight="10dp"
	    android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_alignParentRight="true"
        android:layout_centerVertical="true"
	    />
</RelativeLayout>

    <android.support.v4.view.ViewPager
        android:id="@+id/pager"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />

    <RadioGroup
        android:id="@+id/tab_rg_menu"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@drawable/bg_bottombar"
        android:orientation="horizontal" >

        <RadioButton
            android:id="@+id/tab_rb_1"
            style="@style/tab_rb_style"
            android:checked="true"
            
            android:text="@string/librarybutton1" />

        <RadioButton
            android:id="@+id/tab_rb_2"
            style="@style/tab_rb_style"
            
            android:text="@string/librarybutton2" />

        <RadioButton
            android:id="@+id/tab_rb_3"
            style="@style/tab_rb_style"
            
            android:text="@string/librarybutton3" />

    </RadioGroup>

    <android.support.v4.app.FragmentTabHost
        android:id="@android:id/tabhost"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone" >

        <FrameLayout
            android:id="@android:id/tabcontent"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="0" />
    </android.support.v4.app.FragmentTabHost>

</LinearLayout>